--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "axios": "^1.8.1",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.4.7",
+    "jspdf": "^3.0.0",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.477.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
