--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.8.1",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.4.7",
+    "google-spreadsheet": "^4.1.4",
     "jspdf": "^3.0.0",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.477.0",
