--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.0.9",
     "autoprefixer": "^10.4.20",
     "axios": "^1.8.1",
+    "canvas-confetti": "^1.9.3",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.4.7",
     "google-spreadsheet": "^4.1.4",
