--- a/package.json
+++ b/package.json
@@ -12,31 +12,31 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@tailwindcss/vite": "^4.0.9",
-    "autoprefixer": "^10.4.20",
     "axios": "^1.8.1",
     "canvas-confetti": "^1.9.3",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.4.7",
     "google-spreadsheet": "^4.1.4",
     "lucide-react": "^0.477.0",
-    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-compare-image": "^3.5.0",
     "react-dom": "^19.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.2.0",
-    "swiper": "^11.2.4",
-    "tailwindcss": "^4.0.9"
+    "swiper": "^11.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.12",
     "vite": "^6.2.1"
   }
 }
