--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^19.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.2.0",
+    "react-toastify": "^11.0.5",
     "swiper": "^11.2.4"
   },
   "devDependencies": {
