--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^19.0.0",
     "react-compare-image": "^3.5.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.5",
